First commit to Github. I've been toying around for a while now. Noteable things: Buffering Cookies Events Exceptions

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-This file was created by JetBrains PhpStorm 6.0.3 for binding GitHub repository
+Another iteration of Molly.
+Trying to create the ultimate modular, event driven, fast, secure, easy, user friendly, monkey-proof cms.
+
+My playground for PHP webdev.
